feat(tag): Added services to manage the tags